--- a/src/app/contacts/contacts-detail/contacts-detail.component.html
+++ b/src/app/contacts/contacts-detail/contacts-detail.component.html
@@ -1,14 +1,14 @@
 <div class="row componentHeader">
     <div class="col-xs-12">
-        <h2 class="pull-left"></h2>
-        <img src="" alt="">
+        <h2 class="pull-left">{{contact.name}}</h2>
+        <img src="{{contact.imageUrl}}" alt="{{contact.name}}">
         <button id="deleteButton" class="btn btn-danger pull-right">Delete</button>
         <button id="editButton" class="btn btn-primary pull-right">Edit</button>
     </div>
 </div>
 <div class="row componentBody">
     <div class="col-xs-12">        
-        <p><strong>Email:</strong></p>
-        <p><strong>Phone:</strong></p>
+        <p><strong>Email: {{contact.email}}</strong></p>
+        <p><strong>Phone: {{contact.phone}}</strong></p>
     </div>
 </div>
