--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,3 +1,10 @@
-div {
-    padding: 0 50px 0 50px;
+.container {
+    margin: 0 0 0 0;
+    width: 100vw;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
