--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -2,7 +2,7 @@
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ contact.name }}</h4>
     </div>
-    <span class="pull-right">
-        <img [src]="contact.imageUrl" [alt]="contact.name" class="img-responsive" style="max-height: 50px;">
+    <span class="pull-right" >
+        <img [src]="contact.imageUrl"  *ngIf="contact.imageUrl !== ' '"[alt]="contact.name" class="img-responsive" style="max-height: 50px;">
     </span>
 </a>
