Implemented ability to delete documents

--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -5,7 +5,7 @@
       <div class="row pull-right margin-left-right">
         <a class="btn btn-primary" (click)="onView()">View</a>
         <a class="btn btn-info" routerLink="edit">Edit</a>
-        <a class="btn btn-danger">Delete</a>
+        <a class="btn btn-danger" (click)="onDelete()">Delete</a>
       </div>
     </div>
   </div>
