--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,13 +1,13 @@
 <div class="row componentHeader">
     <div class="col-xs-12">
         <h2 class="pull-left"><strong>Contacts</strong></h2>
-        <button class="btn btn-success pull-right">New Contact</button>
+        <button class="btn btn-success pull-right" routerLink="new">New Contact</button>
     </div>
 </div>
 <div class="row componentBody">
     <div class="col-xs-12">
         <div>
-            <cms-contact-item *ngFor="let contact of contacts" [contact]="contact" (click)="onSelected(contact)"></cms-contact-item>
+            <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"></cms-contact-item>
         </div>      
     </div>
 </div>
