--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -4,7 +4,7 @@
       <cms-contact-list></cms-contact-list>
     </div>
     <div class="col-md-4">
-      <cms-contacts-detail [contact]="selectedContact" *ngIf="selectedContact"></cms-contacts-detail>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
