Week 8 updates. Add/Delete/Edit documents & contacts

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -7,7 +7,7 @@
 <div class="row componentBody">
     <div class="col-xs-12">
         <div>
-            <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"></cms-contact-item>
+            <cms-contact-item *ngFor="let contact of contacts" [contact]="contact" dnd-draggable [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"></cms-contact-item>
         </div>      
     </div>
 </div>
