--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -57,7 +57,7 @@
               class="form-control"
               size="150"
               max="255"
-              #url="ngModel"
+              url="ngModel"
               name="url"
               [ngModel]="contact?.imageUrl"
               >
